# sitg

./: .gitignore  README.md  package-lock.json
.github/workflows/: bot-worker.yml  frontend-web.yml
backend-api/: Cargo.toml  README.md
backend-api/migrations/: 0001_init.sql  0002_auth_wallet.sql  0003_internal_replay_and_outbox.sql  0004_bot_action_results.sql  0005_bot_tenant_auth.sql  0006_user_sessions_github_access_token.sql  0007_centralized_bot_reset.sql
backend-api/src/: app.rs  config.rs  error.rs  main.rs
backend-api/src/models/: api.rs  db.rs
backend-api/src/routes/: mod.rs
backend-api/src/services/: github_oauth.rs  internal_auth.rs  jobs.rs  mod.rs  quote_service.rs  rate_limiter.rs  signature_service.rs  stake_service.rs
backend-api/tests/: db_integration.rs
bot-worker/: .env.example  OPERATIONS.md  README.md  package-lock.json  package.json  tsconfig.json
bot-worker/src/: backend.ts  config.ts  crypto.ts  deadlines.ts  github.ts  idempotency.ts  index.ts  persistence.ts  (+4 more)
deploy/: README.md
docs/: 01-overview.md  02-architecture.md  03-smart-contract.md  04-database-schema.md  05-backend-api.md  06-github-bot.md  07-frontend.md  08-post-mvp.md  09-open-questions.md  10-plan-changes-summary.md  11-e2e-harness.md  12-test-coverage-checklist.md  13-production-runbook.md  14-centralized-bot-interfaces.md  15-centralized-bot-work-plan.md  16-centralized-bot-deployment.md  README.md
frontend-web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
staking-contract/: README.md  foundry.toml
(+73 files in other folders)
